--- a/translation/data/de.json
+++ b/translation/data/de.json
@@ -941,31 +941,31 @@
   "page.work.next-seo.title": {
     "message": "Unsere Arbeit"
   },
-  "page.year-in-review.2020.section.big-impact-changes.apple.content": {
+  "page.year-in-review.2020.section.big-impact-changes.apple.paragraph": {
     "message": "Wir haben Bot-Benachrichtigungen für Community-Events und -Aktionen aktiviert."
   },
-  "page.year-in-review.2020.section.big-impact-changes.banana.content": {
+  "page.year-in-review.2020.section.big-impact-changes.banana.paragraph": {
     "message": "Wir haben unsere LinkedIn-Seite für unsere Freiwilligen eingerichtet."
   },
-  "page.year-in-review.2020.section.big-impact-changes.carrot.content": {
+  "page.year-in-review.2020.section.big-impact-changes.carrot.paragraph": {
     "message": "Wir haben unseren Onboarding-Prozess und unsere Entwicklerleitfäden verbessert."
   },
-  "page.year-in-review.2020.section.big-impact-changes.grape.content": {
+  "page.year-in-review.2020.section.big-impact-changes.grape.paragraph": {
     "message": "Wir haben Google Analytics in alle unsere Projekte integriert."
   },
   "page.year-in-review.2020.section.big-impact-changes.heading": {
     "message": "Kleine Änderungen mit großer Wirkung"
   },
-  "page.year-in-review.2020.section.big-impact-changes.kiwi.content": {
+  "page.year-in-review.2020.section.big-impact-changes.kiwi.paragraph": {
     "message": "Wir haben mehrere unserer früheren Projekte veröffentlicht und als Open Source zur Verfügung gestellt."
   },
-  "page.year-in-review.2020.section.big-impact-changes.orange.content": {
+  "page.year-in-review.2020.section.big-impact-changes.orange.paragraph": {
     "message": "Wir haben unser anonymes Feedback-Formular für Freiwillige veröffentlicht."
   },
-  "page.year-in-review.2020.section.big-impact-changes.strawberry.content": {
+  "page.year-in-review.2020.section.big-impact-changes.strawberry.paragraph": {
     "message": "Wir haben eine fortschrittliche Software zur Serverüberwachung installiert."
   },
-  "page.year-in-review.2020.section.big-impact-changes.watermelon.content": {
+  "page.year-in-review.2020.section.big-impact-changes.watermelon.paragraph": {
     "message": "Wir nehmen ab sofort Bewerbungen von Python-Entwicklern entgegen."
   },
   "page.year-in-review.2020.section.by-the-numbers.2020-traffic.heading": {
@@ -1010,19 +1010,19 @@
   "page.year-in-review.2020.section.community-building.heading": {
     "message": "GEMEINSCHAFTSGEBÄUDE"
   },
-  "page.year-in-review.2020.section.community-building.our-values.content": {
+  "page.year-in-review.2020.section.community-building.our-values.paragraph": {
     "message": "Wir kamen als Gemeinschaft zusammen und beschlossen, welche Werte wir uns zu eigen machen wollten, und formulierten unseren Auftrag und unsere Ziele."
   },
   "page.year-in-review.2020.section.community-building.our-values.heading": {
     "message": "Unsere Werte"
   },
-  "page.year-in-review.2020.section.community-building.partnerships.content": {
+  "page.year-in-review.2020.section.community-building.partnerships.paragraph": {
     "message": "In diesem Jahr sind wir sehr froh, mit PETA, Beyond Animal und Project Counterglow zusammenzuarbeiten. Diese drei Partner haben uns in diesem Jahr zu neuen Höhenflügen verholfen, und wir sind sehr dankbar, dass wir ihnen dienen und uns auf sie als unsere neuen Freunde verlassen können."
   },
   "page.year-in-review.2020.section.community-building.partnerships.heading": {
     "message": "Partnerschaften"
   },
-  "page.year-in-review.2020.section.community-building.volunteers.content": {
+  "page.year-in-review.2020.section.community-building.volunteers.paragraph": {
     "message": "Dieses Jahr konnten wir Freiwillige gewinnen, die für Trello, Microsoft, Etsy, Better Eating, Mercy for Animals, Save Movement und Paypal arbeiteten!"
   },
   "page.year-in-review.2020.section.community-building.volunteers.heading": {
@@ -1031,55 +1031,55 @@
   "page.year-in-review.2020.section.header.image.alt-text": {
     "message": "Jahresrückblick 2020"
   },
-  "page.year-in-review.2020.section.highlighted-projects.animal-rights-map.content": {
+  "page.year-in-review.2020.section.highlighted-projects.animal-rights-map.paragraph": {
     "message": "Mit über 2.500 Gruppen ist die Animal Rights Map eine weltweit aktualisierte Karte, die Veganern hilft, lokale Gruppen zu finden, bei denen sie aktiv werden können. Unsere Karte enthält alle, von den größten Organisationen bis hin zu den sehr kleinen Basisgruppen, die über das ganze Land verteilt sind. Wir haben mit einigen Organisationen zusammengearbeitet, um neue Gruppen automatisch zu importieren, und wir haben einen engagierten Freiwilligen (der dieses Projekt ins Leben gerufen hat), der die Karte fast jeden Tag akribisch aktualisiert. Wir haben viel tolles Feedback für die Karte von Veganern erhalten, die aktiv werden wollen - wir planen, bald mehr Daten zu sammeln und die Funktionen dieser Karte für 2021 zu erweitern!"
   },
-  "page.year-in-review.2020.section.highlighted-projects.daily-nooch.content": {
+  "page.year-in-review.2020.section.highlighted-projects.daily-nooch.paragraph": {
     "message": "Mit diesem Projekt wollten wir etwas schaffen, das ein wenig mehr Spaß macht und leicht ist, das Veganer gerne konsumieren und mit der Welt teilen können. Daily Nooch ist Ihre zentrale Anlaufstelle für tägliche vegane Nachrichten, Ressourcen und Inspiration. Als Startseite konzipiert, finden Sie hier jeden Tag um Mitternacht die neuesten Nachrichten, Zitate, Kunst, Memes, Fakten, Videos und mehr. Dieses Projekt ist noch sehr experimentell und wir wissen nicht, ob Veganer es konsequent nutzen werden, aber in der Zwischenzeit hatte das Team eine Menge Spaß bei der Erstellung. Wenn es den Leuten gefällt, haben wir eine Reihe lustiger Ideen, die dem Projekt mehr Interaktivität verleihen werden."
   },
   "page.year-in-review.2020.section.highlighted-projects.heading": {
     "message": "Siehe unsere HIGHLIGHTED PROJECTS"
   },
-  "page.year-in-review.2020.section.highlighted-projects.my-daily-dozen.content": {
+  "page.year-in-review.2020.section.highlighted-projects.my-daily-dozen.paragraph": {
     "message": "Dr. Greger, der Gründer von NutritionFacts.org, hat eine App mit dem Namen \"Daily Dozen\" entwickelt, mit der Sie Ihre Ernährung verfolgen und sicherstellen können, dass Sie sich optimal ernähren - und die die gesündesten Lebensmittel und die Anzahl der Portionen auflistet, die wir täglich abhaken sollten. Wir wollten dieses Konzept erweitern und eine webbasierte Version seiner App mit einigen zusätzlichen Funktionen erstellen. Mit My Daily Dozen können Sie täglich die von Dr. Greger in seinem New York Times-Bestseller How Not to Die empfohlenen Lebensmittel verfolgen. Wir hoffen, dass dieses Projekt Nicht-Veganern den Weg zum Veganismus erleichtert, indem sie einen pflanzlichen Lebensstil annehmen."
   },
-  "page.year-in-review.2020.section.highlighted-projects.vegan-bootcamp.content": {
+  "page.year-in-review.2020.section.highlighted-projects.vegan-bootcamp.paragraph": {
     "message": "Nach dem erfolgreichen Start des Vegan Bootcamp im Jahr 2019 mit über 5000+ Anmeldungen haben wir beschlossen, mehr Zeit in die Verbesserung des Programms zu investieren. Wir haben eine Umfrage an alle Mitglieder verschickt und eine große Menge an Feedback erhalten, das uns geholfen hat zu entscheiden, welche neuen Inhalte und Funktionen benötigt werden. Vegan Bootcamp umfasst jetzt Community-Foren, individuelle Kurse, Tags, bessere Belohnungen, erweiterte Statistiken für Empfehlungen, eine Inhaltssuche, ein Unterstützungsprogramm für vegane Ernährungsberater, ein Mentorenprogramm und ist jetzt in 10 verschiedene Sprachen übersetzt!"
   },
   "page.year-in-review.2020.section.moving-forward.btn.text": {
     "message": "Unterstützen Sie unsere Arbeit!"
   },
-  "page.year-in-review.2020.section.moving-forward.content[0]": {
+  "page.year-in-review.2020.section.moving-forward.paragraph.0": {
     "message": "Auch wenn wir mit den diesjährigen Ergebnissen zufrieden sind, erkennen wir die Notwendigkeit eines stärker datenbasierten Ansatzes, wenn wir unser Netzwerk von fantastischen Freiwilligen effektiv nutzen wollen."
   },
-  "page.year-in-review.2020.section.moving-forward.content[1]": {
+  "page.year-in-review.2020.section.moving-forward.paragraph.1": {
     "message": "Wir sind uns auch darüber im Klaren, dass Innovation oft auf unbekanntem Terrain stattfindet, wo es oft an Daten mangelt. Daher wollen wir für 2021 ein ausgewogenes Verhältnis zwischen der Auswahl von Projekten, die mit unserem Innovationsansatz übereinstimmen, und der Nutzung von Daten finden, um herauszufinden, welche Projekte die größten Auswirkungen auf unsere Bewegung haben könnten."
   },
-  "page.year-in-review.2020.section.moving-forward.content[2]": {
+  "page.year-in-review.2020.section.moving-forward.paragraph.2": {
     "message": "Wir sind sehr gespannt auf Ihre Meinung zu unserem Jahresrückblick 2020. Wenn Ihnen gefällt, was wir tun, sollten Sie uns unterstützen, indem Sie auf die Schaltfläche unten klicken. Mit Ihrer Spende stellen Sie sicher, dass unsere Arbeit und unsere Projekte weiterhin kostenlos und für alle zugänglich sind. Wir können Ihnen gar nicht genug für Ihre Unterstützung danken!"
   },
   "page.year-in-review.2020.section.moving-forward.heading": {
     "message": "Schluss machen und weitermachen!"
   },
-  "page.year-in-review.2020.section.new-teams.blueberry.content": {
+  "page.year-in-review.2020.section.new-teams.blueberry.paragraph": {
     "message": "Wir haben kürzlich das Team der Spezialisten vorgestellt! 9 neue Aktivisten sind dem Team beigetreten und jeder von ihnen erfüllt derzeit die Rollen von: Release, DevOps, Sicherheit, SEO, CSS, Kunst, Karten, Video und Audio. Dies füllte eine Lücke, in der unsere Teammitglieder gezielt Probleme in ihren Projekten durch das Team Bluebbery angegangen werden konnten."
   },
   "page.year-in-review.2020.section.new-teams.blueberry.heading": {
     "message": "<span>Fachleute</span> | Team Blueberry"
   },
-  "page.year-in-review.2020.section.new-teams.strawberry.content[0]": {
+  "page.year-in-review.2020.section.new-teams.strawberry.paragraph.0": {
     "message": "Wir haben <link>ein neues Team gegründet</link>, das sich der Sammlung und Analyse von Daten widmet, nicht nur über die Projekte, die wir entwickeln, sondern auch über Vegan Hacktivists als Organisation. Dieses Team steht für unser Engagement für Daten, ein Engagement, das sicherstellt, dass alles, was wir tun, eine große Wirkung hat, und dass wir in der Lage sind, aus unserer Arbeit in der Vergangenheit zu lernen und die Arbeit, die wir in der Zukunft tun, zu gestalten."
   },
-  "page.year-in-review.2020.section.new-teams.strawberry.content[1]": {
+  "page.year-in-review.2020.section.new-teams.strawberry.paragraph.1": {
     "message": "Suan Chin leitet dieses Team mit 7 weiteren Datenwissenschaftlern. Das gesamte Team finden Sie auf der <link>Teamseite hier</link>. Wir sind gespannt, wie dieses Team die Zukunft unserer Arbeit gestalten wird!"
   },
   "page.year-in-review.2020.section.new-teams.strawberry.heading": {
     "message": "<span>Datenanalyse</span> | Team Strawberry"
   },
-  "page.year-in-review.2020.section.strategy-and-experimentation.content[0]": {
+  "page.year-in-review.2020.section.strategy-and-experimentation.paragraph.0": {
     "message": "Wie 2019 haben wir uns auf die Entwicklung von Projekten konzentriert, ohne dass wir wussten, ob diese Projekte erfolgreich sein würden. Wir betrachten dies als eine risikoreiche Strategie, da wir Hunderte von Stunden ehrenamtlicher Arbeit in diese experimentellen Projekte investieren."
   },
-  "page.year-in-review.2020.section.strategy-and-experimentation.content[1]": {
+  "page.year-in-review.2020.section.strategy-and-experimentation.paragraph.1": {
     "message": "Wir sind dankbar, dass dies im letzten Jahr funktioniert hat, denn 3 der 6 Projekte, die wir aufgebaut haben, erfüllten unsere Erfolgsstandards, so dass wir mit dieser Methodik fortfuhren. Wir glauben fest daran, dass es für jede Bewegung wichtig ist, innovativ zu sein, neue Taktiken auszuprobieren, experimentelle Werkzeuge zu entwickeln und alternative Strategien zu entwickeln."
   },
   "page.year-in-review.2020.section.strategy-and-experimentation.heading": {
@@ -1124,19 +1124,19 @@
   "page.year-in-review.2020.section.we-grew.launched.heading.start": {
     "message": "WIR HABEN GESTARTET"
   },
-  "page.year-in-review.2020.section.working-with-organizations.animal-rebellion.content": {
+  "page.year-in-review.2020.section.working-with-organizations.animal-rebellion.paragraph": {
     "message": "Wir haben uns dieses Jahr mit Animal Rebellion zusammengetan, um bei der Erstellung ihrer neuen Website zu helfen, für die wir ein ganzes Team abgestellt haben, das etwa 6 Monate Arbeit benötigte. Die Zusammenarbeit mit ihrem technischen Team war fantastisch, sie waren sehr sachkundig und wir hatten das Gefühl, dass wir bei jeder Begegnung während unserer Arbeit mit einem Team von Profis zusammenarbeiteten. Animal Rebellion ist eine Massenbewegung, die mit gewaltfreiem zivilem Widerstand den Übergang zu einem gerechten und nachhaltigen pflanzlichen Lebensmittelsystem herbeiführen will, um das Massensterben zu stoppen, die schlimmsten Auswirkungen des Klimawandels abzumildern und Gerechtigkeit für Tiere zu gewährleisten."
   },
   "page.year-in-review.2020.section.working-with-organizations.animal-rebellion.heading": {
     "message": "Rebellion der Tiere"
   },
-  "page.year-in-review.2020.section.working-with-organizations.animal-save-movement.content": {
+  "page.year-in-review.2020.section.working-with-organizations.animal-save-movement.paragraph": {
     "message": "Wir durften mit Animal Save zusammenarbeiten und ihnen bei ihrer neuen Website helfen. Wir halfen auch bei ihrer Werbekampagne und betreuten diese für einige Monate, um die Arbeit und den Newsletter von Save bekannter zu machen. Falls Sie noch nichts von Save gehört haben: Die Organisation hat es sich zur Aufgabe gemacht, vor jedem Schlachthof Mahnwachen abzuhalten und für jedes ausgebeutete Tier Zeugnis abzulegen. Sie leiten auch die Klima- und Gesundheits-Save-Bewegung, die sich für die Umkehrung des katastrophalen Klimawandels und eine pflanzliche Ernährung einsetzt. Es war eine große Freude, ihr Team von leidenschaftlichen Aktivisten kennenzulernen und mit ihnen zusammenzuarbeiten!"
   },
   "page.year-in-review.2020.section.working-with-organizations.animal-save-movement.heading": {
     "message": "Tierschutz-Bewegung"
   },
-  "page.year-in-review.2020.section.working-with-organizations.excelsior.content": {
+  "page.year-in-review.2020.section.working-with-organizations.excelsior.paragraph": {
     "message": "Die Excelsior 4 sind vier Aktivisten, die wegen der Aufdeckung krimineller Tierquälerei auf der Excelsior Hog Farm in insgesamt 21 Fällen angeklagt sind. Wir haben mit ihnen zusammengearbeitet, um eine neue Website einzurichten, die es ihnen ermöglichen würde, so schnell wie möglich Spenden für ihre rechtliche Verteidigung zu sammeln. Wir sind der Meinung, dass die Arbeit, die sie geleistet haben, und das, was sie aufgedeckt haben, extrem wichtig ist, und wir sind sehr froh, dass wir die Möglichkeit hatten, sie zu unterstützen und ihnen dabei zu helfen, die Seite zum Laufen zu bringen. Bitte besuchen Sie sie und unterstützen Sie sie, wenn Sie können!"
   },
   "page.year-in-review.2020.section.working-with-organizations.excelsior.heading": {
@@ -1145,7 +1145,7 @@
   "page.year-in-review.2020.section.working-with-organizations.heading": {
     "message": "Arbeit mit ORGANISATIONEN"
   },
-  "page.year-in-review.2020.section.working-with-organizations.lebanese-vegans.content": {
+  "page.year-in-review.2020.section.working-with-organizations.lebanese-vegans.paragraph": {
     "message": "Das soziale Zentrum der libanesischen Veganer ist das einzige Zentrum für Tierrechte und die Unterstützung von Veganern in Südwestasien und Nordafrika. Es bietet monatlich kostenlose Workshops und Vorträge über Veganismus, verteilt wöchentlich kostenlos Lebensmittel und führt monatliche Kampagnen zur Sensibilisierung für Tierrechte durch. Wir hatten das Glück, mit ihnen zusammenzuarbeiten, um ihnen sowohl bei der Einführung ihrer neuen Website als auch beim Re-Branding mit einem neuen Logo zu helfen. Die Zusammenarbeit mit unserem Berater Seb Alex, der die Arbeit von Lebanese Vegans organisiert, war sehr angenehm."
   },
   "page.year-in-review.2020.section.working-with-organizations.lebanese-vegans.heading": {
